# ocr_task

./: README.md  logs.txt  main.py  ocr_process.py  pipeline.py  processing.py  pyproject.toml
