[tool.poetry]
name = "nexus-task"
description = ""
version = "1.0"
authors=["A.bykov"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.9.1"
click = "^8.0.1"
yapf = "^0.32.0"
opencv-python = "^4.5.2"
deskew = "^0.10.30"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
numpy = "^1.21.0"
pytesseract = "^0.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
